# pulse-anthropic

./: README.md  pyproject.toml
pulse_anthropic/: __init__.py  adapter.py  version.py
tests/: test_anthropic_adapter.py
